[gd_scene load_steps=10 format=3 uid="uid://c6game0001"]

[ext_resource type="Script" path="res://scripts/game/game_screen.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/game/top_info_bar.gd" id="2_topbar"]
[ext_resource type="Script" path="res://scripts/game/game_field.gd" id="3_field"]
[ext_resource type="Script" path="res://scripts/game/goal_gate.gd" id="5_gate"]
[ext_resource type="Script" path="res://scripts/game/battle_log.gd" id="6_battlelog"]
[ext_resource type="PackedScene" uid="uid://c8trade001" path="res://scenes/game/trade_dialog.tscn" id="7_trade"]
[ext_resource type="Script" path="res://scripts/game/virtual_joystick.gd" id="8_joystick"]
[ext_resource type="PackedScene" uid="uid://c9zone001" path="res://scenes/game/zone_dialog.tscn" id="9_zone"]
[ext_resource type="Script" path="res://scripts/game/my_cards_bar.gd" id="10_mycards"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopInfoBar" type="PanelContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
script = ExtResource("2_topbar")

[node name="Margin" type="MarginContainer" parent="VBox/TopInfoBar"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="VBox/TopInfoBar/Margin"]
layout_mode = 2

[node name="CardTotals" type="HBoxContainer" parent="VBox/TopInfoBar/Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBox/TopInfoBar/Margin/VBox/CardTotals"]
layout_mode = 2
text = "ÂÖ®‰Ωì:"

[node name="RockTotalLabel" type="Label" parent="VBox/TopInfoBar/Margin/VBox/CardTotals"]
unique_name_in_owner = true
layout_mode = 2
text = "‚úä 0"

[node name="Sep1" type="VSeparator" parent="VBox/TopInfoBar/Margin/VBox/CardTotals"]
layout_mode = 2

[node name="ScissorsTotalLabel" type="Label" parent="VBox/TopInfoBar/Margin/VBox/CardTotals"]
unique_name_in_owner = true
layout_mode = 2
text = "‚úå 0"

[node name="Sep2" type="VSeparator" parent="VBox/TopInfoBar/Margin/VBox/CardTotals"]
layout_mode = 2

[node name="PaperTotalLabel" type="Label" parent="VBox/TopInfoBar/Margin/VBox/CardTotals"]
unique_name_in_owner = true
layout_mode = 2
text = "‚úã 0"

[node name="InfoRow" type="HBoxContainer" parent="VBox/TopInfoBar/Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="TimeLabel" type="Label" parent="VBox/TopInfoBar/Margin/VBox/InfoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "5:00"

[node name="Sep3" type="VSeparator" parent="VBox/TopInfoBar/Margin/VBox/InfoRow"]
layout_mode = 2

[node name="StarsLabel" type="Label" parent="VBox/TopInfoBar/Margin/VBox/InfoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "‚≠ê√ó3"

[node name="Sep5" type="VSeparator" parent="VBox/TopInfoBar/Margin/VBox/InfoRow"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="VBox/TopInfoBar/Margin/VBox/InfoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "üí∞ 100"

[node name="GameFieldContainer" type="SubViewportContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBox/GameFieldContainer"]
handle_input_locally = false
size = Vector2i(720, 900)
render_target_update_mode = 4

[node name="GameField" type="Node2D" parent="VBox/GameFieldContainer/SubViewport"]
script = ExtResource("3_field")

[node name="FieldBG" type="ColorRect" parent="VBox/GameFieldContainer/SubViewport/GameField"]
color = Color(0.15, 0.2, 0.15, 1)

[node name="Zones" type="Node2D" parent="VBox/GameFieldContainer/SubViewport/GameField"]

[node name="GoalGate" type="Node2D" parent="VBox/GameFieldContainer/SubViewport/GameField"]
script = ExtResource("5_gate")

[node name="GateVisual" type="ColorRect" parent="VBox/GameFieldContainer/SubViewport/GameField/GoalGate"]
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0.85, 0, 0.5)

[node name="GateLabel" type="Label" parent="VBox/GameFieldContainer/SubViewport/GameField/GoalGate"]
offset_left = -40.0
offset_top = -15.0
offset_right = 40.0
offset_bottom = 15.0
text = "GOAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Players" type="Node2D" parent="VBox/GameFieldContainer/SubViewport/GameField"]

[node name="Camera2D" type="Camera2D" parent="VBox/GameFieldContainer/SubViewport/GameField"]

[node name="VirtualJoystick" type="Control" parent="."]
layout_mode = 1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -310.0
offset_right = 210.0
offset_bottom = -110.0
mouse_filter = 2
script = ExtResource("8_joystick")

[node name="NegotiateButton" type="Button" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -70.0
offset_right = -15.0
offset_bottom = -15.0
toggle_mode = true
text = "üí∞ ‰∫§Ê∏â"

[node name="BattleLog" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
offset_top = 125.0
offset_bottom = 280.0
mouse_filter = 2
script = ExtResource("6_battlelog")

[node name="MyCardsBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -90.0
offset_right = 270.0
offset_bottom = -10.0
grow_horizontal = 2
alignment = 1
theme_override_constants/separation = 8
mouse_filter = 2
script = ExtResource("10_mycards")

[node name="RockPanel" type="PanelContainer" parent="MyCardsBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RockLabel" type="Label" parent="MyCardsBar/RockPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "‚úä
√ó4"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="ScissorsPanel" type="PanelContainer" parent="MyCardsBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScissorsLabel" type="Label" parent="MyCardsBar/ScissorsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "‚úå
√ó4"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="PaperPanel" type="PanelContainer" parent="MyCardsBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PaperLabel" type="Label" parent="MyCardsBar/PaperPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "‚úã
√ó4"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="TradeDialog" parent="." instance=ExtResource("7_trade")]

[node name="ZoneDialog" parent="." instance=ExtResource("9_zone")]
